--- a/Terraform-pro/Jenkinsfile
+++ b/Terraform-pro/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
     
     environment {
         TF_VERSION = "1.0.0" // Replace with your desired Terraform version
+        AWS_CREDENTIALS = credentials('AWS_Cred')
         AWS_REGION = "us-east-1" // Replace with your AWS region
     }
     
