--- a/Terraform-pro/Jenkinsfile
+++ b/Terraform-pro/Jenkinsfile
@@ -15,7 +15,9 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
+                checkout ([url: 'https://github.com/PraveenKumar0796/First_project.git'])
                 git 'https://github.com/PraveenKumar0796/First_project.git'
+
             }
         }
         
