--- a/Terraform-pro/Jenkinsfile
+++ b/Terraform-pro/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 git 'https://github.com/PraveenKumar0796/First_project.git'
+                git checkout 'main'
 
             }
         }
@@ -24,7 +25,7 @@ pipeline {
             steps {
                 script {
                     // Initialize Terraform
-                    sh 'terraform init'
+                    sh 'terraform init -backend-config="bucket=terraform0123tf" -backend-config="key=terraform.tfstate" -backend-config="region=us-east-1"'
                 }
             }
         }
